--- a/views/404Page.pug
+++ b/views/404Page.pug
@@ -1,17 +1,8 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Page not found
+extends layout/page-layout.pug 
+
+block styles
     link(rel="stylesheet", href="/style.css")
-  body
-    header
-      ul
-        li
-          a(href="/") Products
-        li
-          a(href="admin/add-product") Add Your Products
+
+block main 
     section
       h1 Page not found
-
